--- a/tubes/Rumah sakit/index.html
+++ b/tubes/Rumah sakit/index.html
@@ -67,7 +67,7 @@
         <section id="lokasi">       
             <div class="card-body">
               <h5 class="card-title">RS.MULTIVERSE</h5>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15809.141762645582!2d112.513986!3d-7.865168999999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3d4508200f545a1c!2sPanorama%20%C4%B0nn%20Residence!5e0!3m2!1sid!2sid!4v1654512631884!5m2!1sid!2sid" width="1490" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15809.141762645582!2d112.513986!3d-7.865168999999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3d4508200f545a1c!2sPanorama%20%C4%B0nn%20Residence!5e0!3m2!1sid!2sid!4v1654512631884!5m2!1sid!2sid" width="100%" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </section>
